--- a/HuffmanCodingDemo/MainWindow.xaml
+++ b/HuffmanCodingDemo/MainWindow.xaml
@@ -5,8 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HuffmanCodingDemo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="647.63">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0" Background="#B2FF0000">
+          
+            <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
+                <Label>哈夫曼源符号：</Label>
+                <TextBlock Width="500"></TextBlock>
+            </StackPanel>
+            <Button Margin="10,10,10,10" Click="Button_Click">生成哈夫曼树</Button>
+        </StackPanel>
+        <Canvas x:Name="canvas" Grid.Row="1">
+            
+        </Canvas>
     </Grid>
 </Window>
