--- a/HuffmanCodingDemo/MainWindow.xaml
+++ b/HuffmanCodingDemo/MainWindow.xaml
@@ -5,23 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HuffmanCodingDemo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="647.63">
+        MinHeight="450" MinWidth="650" Height="450" Width="650" Title="基于HuffmanCoding的简易压缩器 By JLoeve">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="3*"></RowDefinition>
         </Grid.RowDefinitions>
+        <Grid Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Margin="10,10,10,10" Click="Compress_Files_Button_Click">
+                <TextBlock FontSize="50">压缩文件...</TextBlock>
+            </Button>
+            <Button Grid.Column="1" Margin="10,10,10,10" Click="UnCompress_Files_Button_Click">
+                <TextBlock FontSize="50">解压缩文件...</TextBlock>
+            </Button>
+        </Grid>
+        <Grid Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="4*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="4*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <GroupBox  Grid.Column="0" Header="待压缩文本">
+                <ScrollViewer Grid.Column="0" >
+                    <TextBox x:Name="textbox_uncompressed" Grid.Column="0" TextWrapping="Wrap"/>
+                </ScrollViewer>
+            </GroupBox>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="4*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="4*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Button Grid.Row="1" Margin="0,5,0,5" Click="Compress_Button_Click" >压缩</Button>
+                <Button Grid.Row="2" Margin="0,5,0,5" Click="UnCompress_Button_Click">解压</Button>
+            </Grid>
+            <GroupBox Grid.Column="2" Header="待解压文本（Base64编码的huf文件数据）">
+                <ScrollViewer Grid.Column="2" >
+                    <TextBox x:Name="textbox_compressed" Grid.Column="2" TextWrapping="Wrap"  />
+                </ScrollViewer>
+            </GroupBox>
+        </Grid>
 
-        <StackPanel Grid.Row="0" Background="#B2FF0000">
-          
-            <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                <Label>哈夫曼源符号：</Label>
-                <TextBlock Width="500"></TextBlock>
-            </StackPanel>
-            <Button Margin="10,10,10,10" Click="Button_Click">生成哈夫曼树</Button>
-        </StackPanel>
-        <Canvas x:Name="canvas" Grid.Row="1">
-            
-        </Canvas>
     </Grid>
 </Window>
