--- a/HuffmanCodingDemo/MainWindow.xaml
+++ b/HuffmanCodingDemo/MainWindow.xaml
@@ -8,13 +8,13 @@
         MinHeight="450" MinWidth="650" Height="450" Width="650" Title="基于HuffmanCoding的简易压缩器 By JLoeve">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="3*"></RowDefinition>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
         <Grid Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
             <Button Grid.Column="0" Margin="10,10,10,10" Click="Compress_Files_Button_Click">
                 <TextBlock FontSize="50">压缩文件...</TextBlock>
@@ -25,28 +25,28 @@
         </Grid>
         <Grid Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="4*"></ColumnDefinition>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="4*"></ColumnDefinition>
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="4*" />
             </Grid.ColumnDefinitions>
-            <GroupBox  Grid.Column="0" Header="待压缩文本">
-                <ScrollViewer Grid.Column="0" >
-                    <TextBox x:Name="TextboxUncompressed" Grid.Column="0" TextWrapping="Wrap"/>
+            <GroupBox Grid.Column="0" Header="待压缩文本">
+                <ScrollViewer Grid.Column="0">
+                    <TextBox x:Name="TextboxUncompressed" Grid.Column="0" TextWrapping="Wrap" />
                 </ScrollViewer>
             </GroupBox>
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="4*"></RowDefinition>
-                    <RowDefinition Height="1*"></RowDefinition>
-                    <RowDefinition Height="1*"></RowDefinition>
-                    <RowDefinition Height="4*"></RowDefinition>
+                    <RowDefinition Height="4*" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="4*" />
                 </Grid.RowDefinitions>
-                <Button Grid.Row="1" Margin="0,5,0,5" Click="Compress_Button_Click" >压缩</Button>
+                <Button Grid.Row="1" Margin="0,5,0,5" Click="Compress_Button_Click">压缩</Button>
                 <Button Grid.Row="2" Margin="0,5,0,5" Click="UnCompress_Button_Click">解压</Button>
             </Grid>
             <GroupBox Grid.Column="2" Header="待解压文本（Base64编码的huf文件数据）">
-                <ScrollViewer Grid.Column="2" >
-                    <TextBox x:Name="TextboxCompressed" Grid.Column="2" TextWrapping="Wrap"  />
+                <ScrollViewer Grid.Column="2">
+                    <TextBox x:Name="TextboxCompressed" Grid.Column="2" TextWrapping="Wrap" />
                 </ScrollViewer>
             </GroupBox>
         </Grid>
