--- a/HuffmanCodingDemo/MainWindow.xaml
+++ b/HuffmanCodingDemo/MainWindow.xaml
@@ -41,8 +41,8 @@
                     <RowDefinition Height="1*" />
                     <RowDefinition Height="4*" />
                 </Grid.RowDefinitions>
-                <Button Grid.Row="1" Margin="0,5,0,5" Click="Compress_Button_Click">压缩</Button>
-                <Button Grid.Row="2" Margin="0,5,0,5" Click="UnCompress_Button_Click">解压</Button>
+                <Button Grid.Row="1" Margin="0,5,0,5" Click="Compress_Button_Click">压缩&gt;&gt;</Button>
+                <Button Grid.Row="2" Margin="0,5,0,5" Click="UnCompress_Button_Click">&lt;&lt;解压</Button>
             </Grid>
             <GroupBox Grid.Column="2" Header="待解压文本（Base64编码的huf文件数据）">
                 <ScrollViewer Grid.Column="2">
